test_data_shell/test_data_and_shell/density_test/config/fortio-cilium-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fortio-server-ingress"
spec:
  endpointSelector:
    matchLabels:
      app: fortio-server
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: fortio-client
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fortio-client-egress"
spec:
  endpointSelector:
    matchLabels:
      app: fortio-client
  egress:
  - toEndpoints:
    - matchLabels:
        app: fortio-server
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/"
